# satysfi-formatter

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  test.saty  token.sh
.github/workflows/: merge.yml  test.yml
doc/: .gitignore  doc.saty  draft.saty
examples/: ex1-v0-1-0.saty  ex1.saty  ex2.saty  ex3.saty  ex4.saty
scripts/: get-token.go  get-token.py  grammar.js  grammar.v0_1_0.js
src/: comment.rs  format.rs  format_lsp.rs  formatter.rs  helper.rs  lib.rs  main.rs  reserved_words.rs  token.rs  utils.rs  visualize.rs
src/format/: expr.rs  header.rs  helper.rs  module.rs  pkg_config.rs
src/tests/: comment.rs  common.rs  ctrl_stmt.rs  horizontal_single.rs  let_block.rs  math.rs  mod.rs  module.rs  space.rs
src/token/: list.rs
tests/: .gitignore  build-test.py
