[package]
name = "satysfi-formatter"
version = "0.1.0"
edition = "2021"
authors = ["usagrada"]
license = "MIT"
repository = "https://github.com/usagrada/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satysfi-parser = { git = "https://github.com/usagrada/satysfi-parser.git" }
clap = { version = "3", features = ["derive"] }
dirs = "*"

[[bin]]
name = "satysfi-fmt"
path = "src/main.rs"
