[package]
name = "satysfi-formatter"
version = "0.1.0"
edition = "2021"
authors = ["usagrada"]
license = "MIT"
repository = "https://github.com/usagrada/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "*"
tree_sitter_satysfi = { git = "https://github.com/monaqa/tree-sitter-satysfi.git", branch = "grammar-v0_1_0" }
clap = { version = "3", features = ["derive"] }
dirs = "*"

[[bin]]
name = "satysfi-fmt"
path = "src/main.rs"
